syntax = "proto3";

import "google/protobuf/timestamp.proto";
package scheme;

message EventId{
    int32 id = 1;
}

message Event{
    int32 id = 1;
    string name = 2;
    google.protobuf.Timestamp starTtime = 3;
    google.protobuf.Timestamp endTime = 4;
}


service EventsHandler {
    rpc Add (Event) returns (EventId);
    rpc Get (EventId) returns (Event);
    rpc Update (Event) returns (Event);
    rpc Delete (EventId) returns (EventId);
}